Bug 1592762 - Update clamped range of font-weight in the gfxFontStyle constructor to match new range allowed in CSS Fonts 4. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D51196